# rvdp-statistical-system

./: .gitignore  Cargo.toml  README.md
src/: client.rs
src/shared/: structs.rs
