[package]
name = "rvdp-statistical-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

robust_verifiable_dp = {git="https://github.com/OrangeFender/RobustVerifiableDP"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bcs =  { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
aptos-crypto = { git ="https://github.com/sourav1547/aptos-core.git",  package ="aptos-crypto", features=["cloneable-private-keys", "fuzzing"]}
blstrs = "0.6.1"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "prover"
path = "src/bin/prover.rs"


[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"